Починил авторизацию через Swagger UI, реализовал refresh-токены, а также добавил цель make clean для очистки и остановки всех контейнеров приложения
