# docs/swagger.json
@@ -14,6 +14,11 @@
     "paths": {
         "/api/flowers/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a flower by its ID",
                 "consumes": [
                     "application/json"
@@ -70,6 +75,11 @@
         },
         "/api/v1/flowers": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of all flowers",
                 "consumes": [
                     "application/json"
@@ -112,6 +122,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add a new flower to the database",
                 "consumes": [
                     "application/json"
@@ -176,6 +191,11 @@
         },
         "/api/v1/flowers/description": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of flowers by their description",
                 "consumes": [
                     "application/json"
@@ -238,6 +258,11 @@
         },
         "/api/v1/flowers/name": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of flowers by their name",
                 "consumes": [
                     "application/json"
@@ -300,6 +325,11 @@
         },
         "/api/v1/flowers/price": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of flowers with prices less than or equal to the specified value",
                 "consumes": [
                     "application/json"
@@ -362,6 +392,11 @@
         },
         "/api/v1/flowers/stock": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of flowers with stock levels less than or equal to the specified value",
                 "consumes": [
                     "application/json"
@@ -424,6 +459,11 @@
         },
         "/api/v1/flowers/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a flower by its ID",
                 "consumes": [
                     "application/json"
@@ -483,6 +523,11 @@
         },
         "/api/v1/flowers/{id}/description": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update the description of a specific flower by its ID",
                 "consumes": [
                     "application/json"
@@ -551,6 +596,11 @@
         },
         "/api/v1/flowers/{id}/name": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update the name of a specific flower by its ID",
                 "consumes": [
                     "application/json"
@@ -619,6 +669,11 @@
         },
         "/api/v1/flowers/{id}/price": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update the price of a specific flower by its ID",
                 "consumes": [
                     "application/json"
@@ -687,6 +742,11 @@
         },
         "/api/v1/flowers/{id}/stock": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update the stock level of a specific flower by its ID",
                 "consumes": [
                     "application/json"
@@ -755,6 +815,11 @@
         },
         "/api/v1/order_flowers": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all flowers in orders for the authenticated user",
                 "consumes": [
                     "application/json"
@@ -799,6 +864,11 @@
         },
         "/api/v1/order_flowers/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all flowers in a specific order",
                 "consumes": [
                     "application/json"
@@ -861,6 +931,11 @@
         },
         "/api/v1/orders": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all orders for the authenticated user",
                 "consumes": [
                     "application/json"
@@ -903,6 +978,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new order for a user with a specific flower and quantity",
                 "consumes": [
                     "application/json"
@@ -967,6 +1047,11 @@
         },
         "/api/v1/orders/user_id": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all orders for a specific user",
                 "consumes": [
                     "application/json"
@@ -1029,6 +1114,11 @@
         },
         "/api/v1/orders/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get an order by its ID",
                 "consumes": [
                     "application/json"
@@ -1086,6 +1176,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update the details of a specific order by its ID",
                 "consumes": [
                     "application/json"
@@ -1152,6 +1247,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a specific order by its ID",
                 "consumes": [
                     "application/json"
@@ -1208,6 +1308,11 @@
         },
         "/api/v1/orders/{id}/flower_id": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update the flower ID of a specific order by its ID",
                 "consumes": [
                     "application/json"
@@ -1276,6 +1381,11 @@
         },
         "/api/v1/orders/{id}/quantity": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update the quantity of a specific flower in an order by its ID",
                 "consumes": [
                     "application/json"
@@ -1344,6 +1454,11 @@
         },
         "/api/v1/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a list of all users",
                 "consumes": [
                     "application/json"
@@ -1388,6 +1503,11 @@
         },
         "/api/v1/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a user by their ID",
                 "consumes": [
                     "application/json"
@@ -1445,6 +1565,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete a user by their ID",
                 "consumes": [
                     "application/json"
@@ -1501,6 +1626,11 @@
         },
         "/api/v1/users/{id}/password": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update the password of a specific user by their ID",
                 "consumes": [
                     "application/json"
@@ -1569,6 +1699,11 @@
         },
         "/api/v1/users/{id}/username": {
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update the username of a specific user by their ID",
                 "consumes": [
                     "application/json"
@@ -1635,9 +1770,61 @@
                 }
             }
         },
+        "/auth/refresh": {
+            "post": {
+                "description": "Generate a new pair of access and refresh tokens using a valid refresh token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Refresh access and refresh tokens",
+                "parameters": [
+                    {
+                        "description": "Refresh token data",
+                        "name": "refreshInput",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.refreshInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/service.Tokens"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.errorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controller.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/sign-in": {
             "post": {
-                "description": "Authenticate an existing user and return JWT token",
+                "description": "Authenticate an existing user and return access and refresh JWT tokens",
                 "consumes": [
                     "application/json"
                 ],
@@ -1660,31 +1847,28 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/service.Tokens"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/controller.errorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/controller.errorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/controller.errorResponse"
                         }
                     }
                 }
@@ -1747,6 +1931,25 @@
         }
     },
     "definitions": {
+        "controller.errorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.refreshInput": {
+            "type": "object",
+            "required": [
+                "refresh_token"
+            ],
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "controller.signInInput": {
             "type": "object",
             "required": [
@@ -1975,10 +2178,22 @@
                     "type": "string"
                 }
             }
+        },
+        "service.Tokens": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
         }
     },
     "securityDefinitions": {
-        "ApiKeyAuth": {
+        "BearerAuth": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
